--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Storient</title>
-    <meta name="description" content="Enterprise Storytelling in Action" />
-    <meta name="author" content="Tech-team" />
+    <title>admin-oasis-workbench</title>
+    <meta name="description" content="Lovable Generated Project" />
+    <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="Storient" />
-    <meta property="og:description" content="Enterprise Storytelling in Action" />
+    <meta property="og:title" content="admin-oasis-workbench" />
+    <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
     <meta name="twitter:card" content="summary_large_image" />
-    
-    
+    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
